HelloUltraviolet/Fixtures/RejectedSource/Expressions/IfConditionNonBool/Source/Main.uv
//! Rejected expression specimen for a non-boolean if condition.

public procedure ifConditionNonBoolReference() -> i32 {
    return if 1 {
        2
    } else {
        3
    }
}
